refactor: scaffold merged app module, move common sources in
- New single app/ module (pom + WxydApplication + application.yml)
- Root pom lists only app; drop spring-cloud dependencyManagement
- Move common sources into app
- Stub ProperConfig to read local common.properties (Nacos removed)
- Replace sun.misc.BASE64* with java.util.Base64 (JDK 17)
- Add .mvn/jvm.config add-opens + lombok 1.18.30 for JDK 17 build

Co-Authored-By: Claude <noreply@anthropic.com>